# zeptoclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.multi-tenant.yml  install.sh
.cargo/: audit.toml
.github/workflows/: ci.yml  pr-hygiene.yml  release.yml
deploy/: digitalocean.yaml  setup.sh
deploy/homebrew/: zeptoclaw.rb
docs/: COMPARISON.md  INTEGRATION_TODO.md  MULTI-TENANT.md  MULTI_TENANT_SECURITY.md
docs/plans/: 2026-02-13-container-isolation.md  2026-02-13-security-hardening.md  2026-02-23-linux-sandbox-runtimes-plan.md  2026-02-23-linux-sandbox-runtimes.md  2026-02-26-control-panel-design.md  TODO.md
landing/: deploy.sh
landing/r8r/: index.html
landing/r8r/docs/src/styles/: custom.css
landing/zeptoclaw/: index.html
landing/zeptoclaw/docs/: astro.config.mjs
landing/zeptoclaw/docs/src/content/docs/: index.mdx
landing/zeptoclaw/docs/src/content/docs/concepts/: channels.md  tools.md
landing/zeptoclaw/docs/src/content/docs/getting-started/: installation.md  introduction.md  quick-start.md
landing/zeptoclaw/docs/src/content/docs/guides/: deployment.md  security.md
landing/zeptoclaw/docs/src/content/docs/reference/: cli.md  configuration.md  environment.md  tools.md
panel/: package.json  pnpm-lock.yaml
scripts/: add-tenant.sh  backup-tenants.sh  generate-compose.sh
src/: audit.rs  error.rs  health.rs  lib.rs  main.rs  transcription.rs
src/agent/: compaction.rs  context.rs  loop.rs  mod.rs
src/auth/: mod.rs
src/bus/: message.rs  mod.rs
src/channels/: discord.rs  factory.rs  lark.rs  manager.rs  mod.rs  slack.rs  telegram.rs  telegram_markdown.rs  types.rs  webhook.rs  whatsapp.rs  whatsapp_cloud.rs
src/cli/: agent.rs  batch.rs  common.rs  config.rs  daemon.rs  doctor.rs  gateway.rs  heartbeat.rs  memory.rs  migrate.rs  mod.rs  onboard.rs  skills.rs  slash.rs  status.rs  template.rs  tools.rs  update.rs  watch.rs
src/config/: mod.rs  templates.rs  types.rs  validate.rs
src/cron/: mod.rs
src/devices/: mod.rs  usb.rs
src/gateway/: container_agent.rs  idempotency.rs  mod.rs  rate_limit.rs  startup_guard.rs
src/heartbeat/: service.rs
src/hooks/: mod.rs
src/kernel/: gate.rs  mod.rs  registrar.rs
src/mcp_server/: handler.rs  mod.rs  stdio.rs
src/memory/: bm25_searcher.rs  factory.rs  hygiene.rs  longterm.rs  mod.rs  snapshot.rs  traits.rs
src/migrate/: config.rs  mod.rs  skills.rs
src/peripherals/: board_profile.rs  i2c.rs  mod.rs  rpi.rs  rpi_i2c.rs
src/providers/: claude.rs  cooldown.rs  error_classifier.rs  fallback.rs  mod.rs  openai.rs  plugin.rs  registry.rs  retry.rs  types.rs
src/runtime/: apple.rs  bubblewrap.rs  docker.rs  factory.rs  firejail.rs  landlock.rs  mod.rs  native.rs
src/safety/: chain_alert.rs  leak_detector.rs  mod.rs  policy.rs  taint.rs
src/security/: agent_mode.rs  mod.rs  mount.rs  shell.rs
src/session/: history.rs  mod.rs  types.rs
src/skills/: loader.rs  mod.rs  registry.rs  types.rs
src/tools/: approval.rs  binary_plugin.rs  clarification.rs  cron.rs  custom.rs  delegate.rs  diff.rs  filesystem.rs  find.rs  git.rs  grep.rs  gsheets.rs  hardware.rs  http_request.rs  longterm_memory.rs  memory.rs  message.rs  mod.rs  pdf_read.rs  plugin.rs  project.rs  r8r.rs  registry.rs  reminder.rs  screenshot.rs  shell.rs  skills_install.rs  skills_search.rs  spawn.rs  stripe.rs  transcribe.rs  types.rs  web.rs  whatsapp.rs
src/tools/mcp/: wrapper.rs
src/utils/: logging.rs  metrics.rs  mod.rs  sanitize.rs  slo.rs  string.rs
tests/: cli_smoke.rs  e2e.rs  integration.rs  no_byte_slices.rs
