[package]
name = "zeptoclaw"
version = "0.1.0"
edition = "2021"
authors = ["ZeptoClaw Contributors"]
description = "Ultra-lightweight personal AI assistant framework"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zeptoclaw/zeptoclaw"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Environment
dotenvy = "0.15"

# Global state
once_cell = "1.19"

# File paths
dirs = "5.0"

# UUID for session IDs
uuid = { version = "1.6", features = ["v4"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Telegram bot
teloxide = { version = "0.12", features = ["macros"], default-features = false }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.10"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "zeptoclaw"
path = "src/main.rs"
