[package]
name = "zeptoclaw"
version = "0.4.0"
edition = "2021"
authors = ["ZeptoClaw Contributors"]
description = "Ultra-lightweight personal AI assistant"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/qhkm/zeptoclaw"
homepage = "https://github.com/qhkm/zeptoclaw"
keywords = ["ai", "agent", "llm", "cli", "rust"]
categories = ["command-line-utilities"]

[dependencies]
# =============================================================================
# ASYNC RUNTIME
# =============================================================================
# Tokio async runtime - using "full" features because teloxide/reqwest
# transitively pull in most features anyway (fs, net, etc.)
# Minimal features don't reduce binary size due to transitive deps.
tokio = { version = "1.35", features = ["full"] }

# =============================================================================
# SERIALIZATION
# =============================================================================
# JSON handling for LLM API requests/responses and config files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# JSON5 parsing for OpenClaw config migration (comments, trailing commas, unquoted keys)
json5 = "0.4"

# =============================================================================
# HTTP CLIENT
# =============================================================================
# Reqwest with rustls (no OpenSSL dependency) for LLM provider APIs
# - json: Automatic JSON serialization in requests
# - rustls-tls: Pure Rust TLS implementation (smaller than native-tls)
# - default-features = false: Excludes unnecessary features
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "multipart"], default-features = false }

# =============================================================================
# CLI
# =============================================================================
# Command-line argument parsing with derive macros
clap = { version = "4.4", features = ["derive"] }

# =============================================================================
# LOGGING & DIAGNOSTICS
# =============================================================================
# Structured logging with span support for debugging agent loops
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# =============================================================================
# ERROR HANDLING
# =============================================================================
# thiserror: Define custom error types with Display/Error derives
# anyhow: Ergonomic error handling with context
thiserror = "1.0"
anyhow = "1.0"

# =============================================================================
# SECURITY
# =============================================================================
# Regex for shell command pattern matching (blocklist bypass prevention)
regex = "1.10"
# High-performance multi-pattern matching for safety layer injection detection
aho-corasick = "1.1"
# XChaCha20-Poly1305 AEAD encryption for secret-at-rest
chacha20poly1305 = "0.10"
# Argon2id password-based key derivation
argon2 = "0.5"
# SHA-256 digest for binary plugin integrity verification
sha2 = "0.10"
# Constant-time comparison for security-sensitive comparisons (token validation)
subtle = "2.5"
# Hex encoding/decoding for master key transport
hex = "0.4"

# =============================================================================
# ASYNC UTILITIES
# =============================================================================
# async-trait: Enable async fn in trait definitions (LLMProvider, Tool, Channel)
# futures: Stream combinators for message bus
async-trait = "0.1"
futures = "0.3"

# =============================================================================
# CONFIGURATION
# =============================================================================
# Environment variable loading (.env files)
dotenvy = "0.15"
# Lazy static initialization for global config
once_cell = "1.19"
# Platform-specific paths (~/.config/zeptoclaw)
dirs = "5.0"

# =============================================================================
# SESSION MANAGEMENT
# =============================================================================
# UUID v4 for unique session identifiers
uuid = { version = "1.6", features = ["v4"] }
# Timestamps for message history and local time formatting
chrono = { version = "0.4", features = ["serde"] }

# =============================================================================
# SCREENSHOT (optional — feature-gated behind "screenshot")
# =============================================================================
# Headless Chromium via Chrome DevTools Protocol for web screenshots
chromiumoxide = { version = "0.7", optional = true, default-features = false, features = ["tokio-runtime"] }

# =============================================================================
# MEMORY BACKENDS (optional — feature-gated)
# =============================================================================
# HNSW approximate nearest-neighbor search (memory-hnsw feature)
instant-distance = { version = "0.6.1", optional = true }

# =============================================================================
# PDF (optional — feature-gated behind "tool-pdf")
# =============================================================================
# Pure-Rust PDF parser for text extraction
lopdf = { version = "0.34", optional = true }

# =============================================================================
# CHANNELS
# =============================================================================
# WebSocket support for future real-time channels
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
# Protobuf decoding for Lark/Feishu pbbp2 WS frames
prost = "0.13"
# Telegram bot SDK (minimal features to reduce bloat)
teloxide = { version = "0.12", features = ["macros", "rustls"], default-features = false }
# Integration helpers
base64 = "0.22"
# Temp directory creation for container env files
tempfile = "3.10"
# Secure password input (hidden terminal echo)
rpassword = "7.3"

# =============================================================================
# EMAIL CHANNEL (optional — feature-gated behind "channel-email")
# =============================================================================
# IMAP IDLE client for real-time inbound email
async-imap   = { version = "0.10", optional = true, default-features = false, features = ["runtime-tokio"] }
# SMTP client for outbound email (STARTTLS, builder API)
lettre       = { version = "0.11", optional = true, default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
# Fast RFC 5322 / MIME parser (zero-copy)
mail-parser  = { version = "0.9",  optional = true }
# TLS adapter for Tokio async streams (IMAP over TLS)
tokio-rustls = { version = "0.26", optional = true }
# Pure-Rust TLS implementation (shared with reqwest, but needs explicit dep for rustls API)
rustls       = { version = "0.23", optional = true }
# Mozilla TLS root certificates for rustls
webpki-roots = { version = "0.26", optional = true }

# =============================================================================
# HARDWARE (optional — feature-gated)
# =============================================================================
# Serial port communication for peripherals (STM32, Arduino, ESP32)
tokio-serial = { version = "5", default-features = false, optional = true }
# probe-rs for STM32/Nucleo memory read (adds ~50 deps; optional)
probe-rs = { version = "0.31", optional = true }

# USB device enumeration — only on platforms nusb supports (Linux, macOS, Windows)
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
nusb = { version = "0.2", default-features = false, optional = true }

# Raspberry Pi GPIO (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
rppal = { version = "0.22", optional = true }

[features]
default = []
# BM25 keyword scoring memory backend (adds ~0 extra deps for now)
memory-bm25 = []
# Embedding-based memory backend using LLM provider's embed() method
memory-embedding = []
# HNSW approximate nearest-neighbor memory backend (instant-distance)
memory-hnsw = ["dep:instant-distance"]
# Web screenshot tool via headless Chromium (Chrome DevTools Protocol)
screenshot = ["chromiumoxide"]
# PDF text extraction tool via lopdf
tool-pdf = ["lopdf"]
# Email channel: IMAP IDLE (inbound) + SMTP (outbound) via TLS
channel-email = ["async-imap", "lettre", "mail-parser", "tokio-rustls", "rustls", "webpki-roots"]
# Hardware discovery + serial peripherals (USB enumeration, serial port communication)
hardware = ["nusb", "tokio-serial"]
# Raspberry Pi GPIO peripheral (Linux only, requires rppal)
peripheral-rpi = ["rppal"]
# Debug probe for STM32/Nucleo memory read via USB (adds ~50 deps)
probe = ["probe-rs"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
# Benchmarking framework
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "message_bus"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "zeptoclaw"
path = "src/main.rs"
